--- a/autodoc/style/style.css
+++ b/autodoc/style/style.css
@@ -1,41 +1,52 @@
+.container{
+    width: 98%;
+    background-color: #000000;
+}
+
 .styled-table {
     border-collapse: collapse;
     margin: 25px 0;
     font-size: 0.9em;
     font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    min-width: 50%;
+    width: 100%;
+    max-width: 95%;
+    box-shadow: 0 0 20px rgba(167, 176, 184, 0.253);
     margin-left: auto;
     margin-right: auto;
 }
 
-.styled-table theadhead tr {
-    background-color: #009880;
-    color: #ffffff;
-    text-align: center;
-}
 
 .styled-table thead tr {
-    background-color: #009879;
-    color: #ffffff;
+    background-color: #121212;
+    color: #03DAC5;
     text-align: left;
 }
 
 .styled-table th,
 .styled-table td {
     padding: 12px 15px;
+    overflow-wrap: break-word;
+    min-width: 80px;
+    max-width: 200px;
 }
 
 .styled-table tbody tr {
-    border-bottom: 1px solid #dddddd;
+    border-bottom: 1px solid #161515;
 }
 
 .styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
+    background-color: #293540;
+    color: white;
+}
+
+.styled-table tbody tr:nth-of-type(odd) {
+    background-color: #1a1d24;
+    color: white;
 }
 
 .styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+    border-bottom: 1px solid #03DAC5;
 }
 
 .styled-table tbody tr.active-row {
